# Factorize

./: .gitignore  CMakeLists.txt  main.cpp
factorize/: CMakeLists.txt  big_int.cpp  big_int.h  factorize.cpp  factorize.h  number.h  poly_generator.cpp  poly_generator.h  polynomial.h  quadratic_sieve.cpp  quadratic_sieve.h  utils.cpp  utils.h
test/: CMakeLists.txt  big_int_test.cpp  poly_generator_test.cpp  quadratic_sieve_test.cpp  quadrativ_sieve_test.cpp
